--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="">
     <h1 id="text"></h1>
-    <canvas id="mainWindow" width="1000" height="1000" style="background-color: green; "></canvas>
+    <canvas id="mainWindow" width="1000" height="1000" style="background-color: black; "></canvas>
 </div>
 
 
